crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI048_PYI048.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI048 Function body must contain exactly one statement
  --> PYI048.pyi:8:5
 6 |     """oof"""  # OK
 7 |
 8 | def oof():  # ERROR PYI048
   |     ^^^
 9 |     """oof"""
10 |     print("foo")

PYI048 Function body must contain exactly one statement
  --> PYI048.pyi:12:5
   |
10 |     print("foo")
11 |
12 | def foo():  # ERROR PYI048
   |     ^^^
13 |     """foo"""
14 |     print("foo")

PYI048 Function body must contain exactly one statement
  --> PYI048.pyi:17:5
   |
15 |     print("foo")
16 |
17 | def buzz():  # ERROR PYI048
   |     ^^^^
18 |     print("fizz")
19 |     print("buzz")
